fixing layout bugs on synchronize page

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -3303,6 +3303,7 @@ span.delete-modal-label {
 
   .database-left-img {
       padding: 5px 0px 5px 0px;
+      text-align: center;
       /*width: 280px*/
   }
 
@@ -3317,6 +3318,30 @@ span.delete-modal-label {
       text-align: center;
   }
 
+  div.rcp {
+      text-align: center;
+  }
+
+  .db-delete-maction {
+    color: #721c24;
+    font-size: 13px !important;
+  }
+
+  .db-refresh-action {
+    color: #0055bb !important;
+    font-size: 13px !important;
+}
+
+  .sdb-delete-control {
+      padding-bottom: 3px;
+  }
+
+  .db-delete-maction:hover {
+     cursor: pointer;
+   }
+
+
+  
   .major-database-controls-align {
     display: inline-block;
     text-align: center;
@@ -3387,8 +3412,9 @@ span.delete-modal-label {
       margin-top: 20px;
   }
 
-
+  
   .database-control-panel-border {
+    padding-bottom: 8px;
   }
 
   .db-home-listing-image {
@@ -3642,7 +3668,7 @@ span.delete-modal-label {
       margin-left: 10px;
   }
 
- 
+  .database-left-img-clickable:hover,
   .clickable-image-panel:hover {
       cursor: pointer;
       background-color: #eff8ff;
@@ -4228,7 +4254,7 @@ span.delete-modal-label {
       width: 100%;
       /* margin: -15px -8px 0px -20px; */
       /* margin-left: -20px; */
-      margin-top: -15px;
+      margin-top: -10px;
       /* margin-right: 10px; */
   }
 
@@ -4238,6 +4264,17 @@ span.delete-modal-label {
 
   .synch-info {
       display: block;
+      padding-bottom: 8px;
+  }
+
+  .remote-origin {
+      margin-left: 14px;
+      margin-top: 20px;
+      background-color: #002856;
+      padding: 0 6px;
+      font-size: 1.1em;
+      color: #efefef !important;
+      height: 24px;
   }
 
   .database-listing-organization-icon {
@@ -4433,7 +4470,7 @@ span.delete-modal-label {
 
   .db-remote-action-buttons {
       width: 100%;
-      padding: 0px 20px 0px 20px !important;
+      padding: 10px 20px 10px 20px !important;
       margin: 0px 80px 10px 70px !important;
   }
 
